--- a/examples/treeview/treeview-1/treeview-1b.html
+++ b/examples/treeview/treeview-1/treeview-1b.html
@@ -405,12 +405,12 @@
 
      <section aria-labelledby="id_kbd">
 
-        <h2 id="">Tree Widget 
+        <h2 id="tree_label">Tree Widget Implementation Information</h2>
 
         <h3>Implementation Notes</h3>
 
         <ul>
-          <li>Need to use CSS focus and hover classes to create focus and hover styling.  This requires using focus/blur and mouseover/mouseout events to apply classes to the <code>treeiem</code> label containers.</li>
+          <li>Need to use CSS focus and hover classes to create focus and hover styling of the visible label for expandable <code>treeitem</code> widgets.  This requires using focus/blur and mouseover/mouseout events to apply classes to the <code>span</code> element that is used as the visible label for the <code>treeitem</code>.</li>
           <li>This example explicitly sets the values for <code>aria-setsize</code>, <code>aria-posinset</code> and <code>arial-level</code>, which override any browser compuuted values.
         </ul>
              
@@ -501,9 +501,9 @@
            </tbody>
         </table>
 
-    <h2 id="rps_label">ARIA Roles, Properties and States</h2>
+       <h3 id="rps_label">ARIA Roles, Properties and States</h3>
 
-      <table aria-labelledby="rps_label"> 
+       <table aria-labelledby="rps_label"> 
         <thead>
           <tr>
             <th>Role</th>
@@ -521,7 +521,7 @@
               <ul>
                 <li>The <code>role=&quot;tree&quot;</code> attribute identifies the <code>ul</code> element as an ARIA <code>tree</code> widget.</li>
                 <li>Accessible name for the <code>tree</code> widget comes from <code>aria-label</code> attribute.</li>
-                <li>The <code>tree</code> widget does not need a <code>tabindex</code> value, since the <code>tree</code> the <code>ul</code> element never receives keyboard focus.</li>
+                <li>The <code>tree</code> widget does not need a <code>tabindex</code> value, since the <code>ul[role&quot;tree&quot;]</code> element never receives keyboard focus.</li>
               </ul> 
             </td>
           </tr>
@@ -544,6 +544,8 @@
               <ul>
                 <li>The <code>role=&quot;group&quot;</code> attribute identifies the <code>ul</code> element as a container of <code>treeitem</code> widgets for a sub-leaf of a tree.</li>
                 <li>The <code>group</code> role is important for the browser to compute <code>aria-level</code>, <code>aria-setsize</code> and <code>aria-posinset</code>.</li>
+                <li>The <code>group</code> is not required to have an accessible name.</li>
+                <li>The <code>group</code> widget does not need a <code>tabindex</code> value, since the <code>ul[role&quot;group&quot;]</code> element never receives keyboard focus.</li>
               </ul> 
             </td>
           </tr>
@@ -564,8 +566,8 @@
             <td><code>li</code></td>
             <td>
               <ul>
-                <li>Identifies the <code>treeitem</code> as an elememt that can receive keyboard focus, but is <strong>not</strong> included in the tab order of the page.</li>
-                <li>code>tabindex=&quot;-1&quot;</code> is he default value for a <code>treeitem</code> widget, since on
+                <li>Identifies the <code>treeitem</code> as an elememt that can receive keyboard focus, but will <strong>not</strong> be included in the tab order of the page.</li>
+                <li><code>tabindex=&quot;-1&quot;</code> is the default value for a <code>treeitem</code> widget.</li>
                </ul>  
             </td>
           </tr>
@@ -575,6 +577,7 @@
             <td><code>li</code></td>
             <td>
               <ul>
+                <li>Only one <code>treeitem</code> in the same <code>tree</code> has a <code>tabindex=&quot;0&quot;</code>.</li>                
                 <li>Identifies the <code>treeitem</code> that last had keyboard focus.</li>
                 <li>The default <code>treeitem</code> with <code>tabindex=&quot;0&quot;</code> is the first <code>treeitem</code> in the <code>tree</code>.</li>
                 <li>See <a href="../../../aria-practices.html#kbd_general_within">roving tabindex</a> for more information.</li>
@@ -597,7 +600,7 @@
             <td><code>li</code></td>
             <td>
               <ul>
-                <li>Indicates the <code>treeitem</code> descendants of the current <code>treeitem</code>s are visible.</li>
+                <li>Indicates the <code>treeitem</code> descendants of the current <code>treeitem</code> widgets are visible.</li>
               </ul>  
             </td>
           </tr>
